--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -494,7 +494,7 @@ graduate:
       - title: "时绍森 - 2022届校友"
         post: "蚂蚁"
         desc:
-        image: ../assets/img/timeline/1.png
+        image: ../assets/img/timeline/shishaosen.jpg
         alt:
 
       - title: "黄天波 - 2022届校友"
