--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -536,7 +536,7 @@ graduate:
       - title: "刘军杰 - 2023届校友"
         post: "中国工商银行"
         desc:
-        image: ../assets/img/timeline/1.png
+        image: ../assets/img/timeline/liujunjie.jpg
         alt:
 
       - title: "方莹 - 2023届校友"
