--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -512,7 +512,7 @@ graduate:
       - title: "刘永志 - 2022届校友"
         post: "腾讯云鼎实验室"
         desc:
-        image: ../assets/img/timeline/1.png
+        image: ../assets/img/timeline/liuyongzhi.jpg
         alt:
 
       - title: "刘成杰 - 2023届校友"
@@ -524,7 +524,7 @@ graduate:
       - title: "肖遥 - 2023届校友"
         post: "字节跳动"
         desc:
-        image: ../assets/img/timeline/1.png
+        image: ../assets/img/timeline/xiaoyao.jpg
         alt:
 
       - title: "胡叶舟 - 2023届校友"
