--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -1786,7 +1786,14 @@ patent:
     text: 
     item:
 
-      - title: "文伟平 宋少波 陈夏润 张庆峰，基于混合模糊测试的Windows驱动程序漏洞挖掘方法"
+      - title: "文伟平 燕昕仪 陈夏润 张庆峰，一种基于大语言模型的新闻推荐方法"
+        source: "国家知识产权局发明专利"
+        number: "专利申请号：：202510362705.6，2025年3月26日"
+        success: false
+        url: "/files/WX2025-31-001-专利申请受理通知书.pdf"
+        download: "：一种基于大语言模型的新闻推荐方法.pdf"
+
+      - title: "文伟平 宋少波 陈夏润 张庆峰，基于动态扩展和兜底机制的中文大语言模型安全评估系统及方法"
         source: "国家知识产权局发明专利"
         number: "专利申请号：：202510506470.3，2025年4月22日"
         success: false
