--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -586,12 +586,7 @@ currentprogram:
         client: "华为（横向）"
         task: "项目负责人"
 
-      - time: "2021.06 - 2022.06"
-        name: "Java程序漏洞挖掘与入侵检测课题"
-        client: "华为（横向）"
-        task: "项目负责人"
-
-      - time: "2022.5 - 2024.5"
+      - time: "2023.5 - 2025.5"
         name: "APT攻击与防御技术分析"
         client: "科技部国家重点研发计划"
         task: "课题负责人"
@@ -644,16 +639,21 @@ team:
         image: ../assets/img/team/ljk.jpg
         social:
 
+      - name: "江昊"
+        role: "APT攻防课题负责人"
+        image: ../assets/img/team/jh.jpg
+        social:
+
           
 
 
 currentstudent:
     title: "课题组成员"
     text: 
-    person: "高年级级<br>陈夏润(博士)，何永强(博士)，刘佳(博士)<br><br>
+    person: "高年级<br>陈夏润(博士)，何永强(博士)，刘佳(博士)<br><br>
              2023级<br>刘成杰(博士)，谢沅甫(博士)，姚文翰(博士)，李锦凯，李鸿宇，田浩然，马亨来，栗飞龙，董雨昕，吴洋洋，李青蓝，王选军，徐梦婷，张技轩，肖叶，李泽信<br><br>
              2024级<br>邢泽栋(博士)，韩博轩，顾哲远，李心祺，郑伊健，王靖雯，谢品良，周杨凯，兰佳晨，张仕捷，方艺智，陈宇豪，罗献党<br><br>
-             2025级<br>江昊(博士)，许嘉星，姜欣悦，杨钰洁，郭湘琦，戴静桐，彭思宇，瞿佳艺，罗笛晓，王众伯，黄月明<br><br>"
+             2025级<br>江昊(博士)，熊必成(博士)，许嘉星，姜欣悦，杨钰洁，郭湘琦，戴静桐，彭思宇，瞿佳艺，罗笛晓，王众伯，黄月明<br><br>"
 
 vulnerability:
     title: "漏洞成果"
