--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -611,7 +611,7 @@ team:
         role: "多模态鉴伪课题负责人"
         image: ../assets/img/team/fyz.jpg
         social:
-          - url: https://github.com/Lizhizhiyi
+          - url: https://github.com/Lizhizhii
             icon: fab fa-github
 
       - name: "韩博轩"
