--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -569,12 +569,12 @@ currentprogram:
       - time: "2024.12 - 2027.12"
         name: "基于公共云网资源的多模态网络环境构造技术"
         client: "科技部国家重点研发计划"
-        task: "项目负责人"
+        task: "课题负责人"
 
       - time: "2024.12 - 2027.12"
         name: "面向多模态网络的多维协议承载与内生安全接入技术（子课题）"
         client: "科技部国家重点研发计划"
-        task: "课题负责人"
+        task: "子课题负责人"
 
       - time: "2025.08 - 2026.08"
         name: "HyperOS AI换脸/AI拟声检测项目"
@@ -586,7 +586,7 @@ currentprogram:
         client: "华为（横向）"
         task: "项目负责人"
 
-      - time: "2023.5 - 2025.5"
+      - time: "2024.12 - 2026.12"
         name: "APT攻击与防御技术分析"
         client: "科技部国家重点研发计划"
         task: "课题负责人"
@@ -653,7 +653,7 @@ currentstudent:
     person: "高年级<br>陈夏润(博士)，何永强(博士)，刘佳(博士)<br><br>
              2023级<br>刘成杰(博士)，谢沅甫(博士)，姚文翰(博士)，李锦凯，李鸿宇，田浩然，马亨来，栗飞龙，董雨昕，吴洋洋，李青蓝，王选军，徐梦婷，张技轩，肖叶，李泽信<br><br>
              2024级<br>邢泽栋(博士)，韩博轩，顾哲远，李心祺，郑伊健，王靖雯，谢品良，周杨凯，兰佳晨，张仕捷，方艺智，陈宇豪，罗献党<br><br>
-             2025级<br>江昊(博士)，熊必成(博士)，许嘉星，姜欣悦，杨钰洁，郭湘琦，戴静桐，彭思宇，瞿佳艺，罗笛晓，王众伯，黄月明<br><br>"
+             2025级<br>李其恩(博士)，江昊(博士)，熊必成(博士)，许嘉星，姜欣悦，杨钰洁，郭湘琦，戴静桐，彭思宇，瞿佳艺，罗笛晓，王众伯，黄月明<br><br>"
 
 vulnerability:
     title: "漏洞成果"
