--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -1140,13 +1140,13 @@ paper:
 
       - title: "Imperceptible rhythm backdoor attacks: Exploring rhythm transformation for embedding undetectable vulnerabilities on speech recognition"
         name: "Wenhan Yao, Jiangkun Yang, Yongqiang He, Jia Liu, Weiping Wen"
-        source: "Neurocomputing,Volume 614,2025,128779. DOI:10.1016/j.neucom.2024.128779"
+        source: "Neurocomputing,Volume 614,2025,128779. DOI:10.1016/j.neucom.2024.128779 （CCF C）"
         url: "/files/paper101.pdf"
         download: "Imperceptible rhythm backdoor attacks: Exploring rhythm transformation for embedding undetectable vulnerabilities on speech recognition.pdf"
 
       - title: "Improved capsule networks based on Nash equilibrium for malicious code classification"
         name: "Meng Wang, Yahao Zhang, WeiPing Wen"
-        source: "Computers & Security  Jan. 2024, 103503. DOI:10.1016/j.cose.2023.103503"
+        source: "Computers & Security  Jan. 2024, 103503. DOI:10.1016/j.cose.2023.103503 （CCF B）"
         url: "https://doi.org/10.1016/j.cose.2023.103503"
         download: "https://doi.org/10.1016/j.cose.2023.103503"
 
