更新xjx专利及近三周组会分享

--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -1819,6 +1819,19 @@ patent:
     title: "专利成果"
     text: 
     item:
+      - title: "文伟平 许嘉星 陈夏润 罗霄羽 刘亚宁，一种基于路径约束分析的公共云网主体安全管控方法与系统"
+        source: "国家知识产权局发明专利"
+        number: "专利申请号：202511642191.6，2025年11月11日"
+        success: false
+        url: "/files/WX2025-03-216-专利申请受理通知书.pdf"
+        download: "：一种基于路径约束分析的公共云网主体安全管控方法与系统.pdf"
+
+      - title: "文伟平 许嘉星 陈夏润 谢成淋 戴静桐 彭思宇 罗霄羽，一种基于神经符号融合推理的公共多模态云网资源软件安全增强方法"
+        source: "国家知识产权局发明专利"
+        number: "专利申请号：202511642190.1，2025年11月11日"
+        success: false
+        url: "/files/WX2025-03-217-专利申请受理通知书.pdf"
+        download: "：一种基于神经符号融合推理的公共多模态云网资源软件安全增强方法.pdf"
 
       - title: "文伟平 燕昕仪 陈夏润 张庆峰，一种基于大语言模型的新闻推荐方法"
         source: "国家知识产权局发明专利"
