--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -1819,6 +1819,13 @@ patent:
     title: "专利成果"
     text: 
     item:
+      - title: "文伟平 董雨昕 刘成杰 王康 王靖雯 方艺智 韩博轩 杨钰洁 姜欣悦，一种公共云网中基于多层次关联数据分析的 REST API 上下文构建方法"
+        source: "国家知识产权局发明专利"
+        number: "专利申请号：202511679158.0，2025年11月17日"
+        success: false
+        url: "/files/WX2025-03-220-专利申请受理通知书.pdf"
+        download: "：一种公共云网中基于多层次关联数据分析的 REST API 上下文构建方法.pdf"
+
       - title: "文伟平 许嘉星 陈夏润 罗霄羽 刘亚宁，一种基于路径约束分析的公共云网主体安全管控方法与系统"
         source: "国家知识产权局发明专利"
         number: "专利申请号：202511642191.6，2025年11月11日"
