--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -1152,6 +1152,12 @@ paper:
     title: "发表论文"
     text: 
     item:
+      - title: "LFBA: Latent-Space Frame-Level Backdoor Attacks on Keyword Spotting Systems"
+        name: "Zexin Li, Wenhan Yao, Ye Xiao, Jinsu Yang, Zedong Xing, Xiarun Chen, Fen Xiao, Weiping Wen"
+        source: "信息网络安全"
+        url: "/files/paper118.pdf"
+        download: "LFBA: Latent-Space Frame-Level Backdoor Attacks on Keyword Spotting Systems.pdf"
+
       - title: "一个用于Java应用程序运行时保护的混合系统"
         name: "江昊, 刘成杰, 文伟平"
         source: "信息网络安全"
@@ -1179,8 +1185,8 @@ paper:
       - title: "Art Style Backdoor Attacks on Semantic Segmentation Models"
         name: "Jinsu Yang, Fen Xiao, Zexin Li, Ye Xiao, Wenhan Yao & Weiping Wen"
         source: "ICANN 2025 (CCF C)"
-        url: "https://link.springer.com/chapter/10.1007/978-3-032-04546-1_15"
-        download: "Art Style Backdoor Attacks on Semantic Segmentation Models"
+        url: "/files/paper117.pdf"
+        download: "Art Style Backdoor Attacks on Semantic Segmentation Models.pdf"
 
       - title: "Imperceptible rhythm backdoor attacks: Exploring rhythm transformation for embedding undetectable vulnerabilities on speech recognition"
         name: "Wenhan Yao, Jiangkun Yang, Yongqiang He, Jia Liu, Weiping Wen"
@@ -1873,63 +1879,63 @@ patent:
     title: "专利成果"
     text: 
     item:
-      - title: "文伟平 董雨昕 刘成杰 王康 王靖雯 方艺智 韩博轩 杨钰洁 姜欣悦，一种公共云网中基于多层次关联数据分析的 REST API 上下文构建方法"
+      - title: "文伟平、董雨昕、刘成杰、王康、王靖雯、方艺智、韩博轩、杨钰洁、姜欣悦，一种公共云网中基于多层次关联数据分析的 REST API 上下文构建方法"
         source: "国家知识产权局发明专利"
         number: "专利申请号：202511679158.0，2025年11月17日"
         success: false
         url: "/files/WX2025-03-220-专利申请受理通知书.pdf"
         download: "：一种公共云网中基于多层次关联数据分析的 REST API 上下文构建方法.pdf"
 
-      - title: "文伟平 许嘉星 陈夏润 罗霄羽 刘亚宁，一种基于路径约束分析的公共云网主体安全管控方法与系统"
+      - title: "文伟平、许嘉星、陈夏润、罗霄羽、刘亚宁，一种基于路径约束分析的公共云网主体安全管控方法与系统"
         source: "国家知识产权局发明专利"
         number: "专利申请号：202511642191.6，2025年11月11日"
         success: false
         url: "/files/WX2025-03-216-专利申请受理通知书.pdf"
         download: "：一种基于路径约束分析的公共云网主体安全管控方法与系统.pdf"
 
-      - title: "文伟平 许嘉星 陈夏润 谢成淋 戴静桐 彭思宇 罗霄羽，一种基于神经符号融合推理的公共多模态云网资源软件安全增强方法"
+      - title: "文伟平、许嘉星、陈夏润、谢成淋、戴静桐、彭思宇、罗霄羽，一种基于神经符号融合推理的公共多模态云网资源软件安全增强方法"
         source: "国家知识产权局发明专利"
         number: "专利申请号：202511642190.1，2025年11月11日"
         success: false
         url: "/files/WX2025-03-217-专利申请受理通知书.pdf"
         download: "：一种基于神经符号融合推理的公共多模态云网资源软件安全增强方法.pdf"
 
-      - title: "文伟平 燕昕仪 陈夏润 张庆峰，一种基于大语言模型的新闻推荐方法"
+      - title: "文伟平、燕昕仪、陈夏润、张庆峰，一种基于大语言模型的新闻推荐方法"
         source: "国家知识产权局发明专利"
         number: "专利申请号：202510362705.6，2025年3月26日"
         success: false
         url: "/files/WX2025-31-001-专利申请受理通知书.pdf"
         download: "：一种基于大语言模型的新闻推荐方法.pdf"
 
-      - title: "文伟平 宋少波 陈夏润 张庆峰，基于动态扩展和兜底机制的中文大语言模型安全评估系统及方法"
+      - title: "文伟平、宋少波、陈夏润、张庆峰，基于动态扩展和兜底机制的中文大语言模型安全评估系统及方法"
         source: "国家知识产权局发明专利"
         number: "专利申请号：202510506470.3，2025年4月22日"
         success: false
         url: "/files/WX2025-31-002-专利申请受理通知书.pdf"
         download: "：基于动态扩展和兜底机制的中文大语言模型安全评估系统及方法.pdf"
 
-      - title: "文伟平 张帅 钟山 江昊，基于混合模糊测试的Windows驱动程序漏洞挖掘方法"
+      - title: "文伟平、张帅、钟山、江昊，基于混合模糊测试的Windows驱动程序漏洞挖掘方法"
         source: "国家知识产权局发明专利"
         number: "专利申请号：202510207790.9，2025年2月25日"
         success: false
         url: "/files/WX2025-03-032-专利申请受理通知书.pdf"
         download: "：基于混合模糊测试的Windows驱动程序漏洞挖掘方法.pdf"
 
-      - title: "文伟平 钟山 张帅 江昊，基于符号执行和动静态分析Windows驱动漏洞挖掘方法"
+      - title: "文伟平、钟山、张帅、江昊，基于符号执行和动静态分析Windows驱动漏洞挖掘方法"
         source: "国家知识产权局发明专利"
         number: "专利申请号：2025102077913，2025年2月25日"
         success: false
         url: "/files/WX2025-03-031-专利申请受理通知书.pdf"
         download: "基于符号执行和动静态分析Windows驱动漏洞挖掘方法.pdf"
 
-      - title: "文伟平 王晗 时林 张世琛，基于联盟链的软件完整性远程快速验证方法与系统"
+      - title: "文伟平、王晗、时林、张世琛，基于联盟链的软件完整性远程快速验证方法与系统"
         source: "国家知识产权局发明专利"
         number: "专利申请号：202311624142.0，2023年12月20日"
         success: false
         url: "/files/WX2023-31-001-发明专利申请公布通知书.pdf"
         download: "基于联盟链的软件完整性远程快速验证方法与系统.pdf"
 
-      - title: "文伟平 王康 张庆峰 尹昊 唐源，基于虚拟机自省的 Linux 恶意代码检测方法与系统"
+      - title: "文伟平、王康、张庆峰、尹昊、唐源，基于虚拟机自省的 Linux 恶意代码检测方法与系统"
         source: "国家知识产权局发明专利"
         number: "专利申请号：202311759593.5，2023年11月30日"
         success: false
@@ -1937,14 +1943,14 @@ patent:
         download: "基于虚拟机自省的 Linux 恶意代码检测方法与系统.pdf"
 
 
-      - title: "文伟平 王雅仪 刘琛 李成扬 方莹，一种基于LLVM的指令加花混淆方法及装置"
+      - title: "文伟平、王雅仪、刘琛、李成扬、方莹，一种基于LLVM的指令加花混淆方法及装置"
         source: "国家知识产权局发明专利"
         number: "专利申请号：202111680645.0，2021年12月31日"
         success: true
         url: "/files/WX2021-03-280-发明专利证书.pdf"
         download: "一种基于LLVM的指令加花混淆方法及装置.pdf"
 
-      - title: "文伟平 彭婷 陈夏润，一种基于区块链和数字人民币的医疗数据共享体系架构"
+      - title: "文伟平、彭婷、陈夏润，一种基于区块链和数字人民币的医疗数据共享体系架构"
         source: "国家知识产权局发明专利"
         number: "专利申请号：202211713901.6，2022年12月29日"
         
